# consolidation-benchmarks

./: LICENSE  README.md  consolidation-benchmarks.cabal  stack.yaml
app/: Main.hs  tags
src/: FilterR1.hs  FilterR2.hs  FilterR3.hs  FilterR4.hs  FoldR1.hs  MapR1.hs  MapR2.hs  Utils.hs  Wrapper.hs
vector-opt/: vector-opt.cabal
vector-opt/Data/: Vector.hs  tags
vector-opt/Data/Vector/: Generic.hs  Mutable.hs  Storable.hs  Unboxed.hs  tags
vector-opt/Data/Vector/Fusion/: Bundle.hs  tags
vector-opt/Data/Vector/Fusion/Bundle/: Monadic.hs  tags
vector-opt/Data/Vector/Fusion/Stream/: Monadic.hs  tags
vector-opt/Data/Vector/Generic/: Mutable.hs  New.hs  tags
vector-opt/Data/Vector/Generic/Mutable/: Base.hs  tags
vector-opt/Data/Vector/Primitive/: Mutable.hs  tags
vector-opt/Data/Vector/Storable/: Mutable.hs  tags
vector-opt/Data/Vector/Unboxed/: Base.hs  Mutable.hs  tags
